--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,11 +7,20 @@
 	</head>
 
 	<body>
+		<header>
+			<h1>Chandler Chilvers</h1>
+		</header>
+
+		<nav>
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/music">Music</a></li>
+				<li><a href="/games">Games</a></li>
+				<li><a href="/about">About</a></li>
+			</ul>
+		</nav>
+
 		<main>
-			<header>
-				<h1>Chandler Chilvers</h1>
-			</header>
-			<hr>
 		</main>
 	</body>
 </html>
