--- a/public/html/music.html
+++ b/public/html/music.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Chandler Chilvers: 404</title>
+		<title>Chandler Chilvers: Music</title>
 	</head>
 
 	<body>
-		<main>
-            <h1>404</h1>
-		</main>
+		<h1>Music</h1>
+		<a href="/music/film">Film Music</a>
 	</body>
 </html>
